corrected hader placement in base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top"></header>
-
+    <header class="container-fluid fixed-top">
+    
     <div class="row">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
@@ -100,6 +100,8 @@
                 </li>
             </ul>
         </div>
+    </header>
+
         
     {% if messages %}
         <div class="message-container"></div>
