--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,22 +1,22 @@
 <div class="collapse navbar-collapse" id="main-nav"></div>
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item d-block d-md-none">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="home-link">
                 Home
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'coffee' %}" id="classes-link">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="classes-link">
                 Coffee
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'accessories' %}" id="trainers-link">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="trainers-link">
                 Accessories
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'Cafes' %}" id="blog-link">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="blog-link">
                 Cafes
             </a>
         </li>
