--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,6 +62,15 @@ body {
 .border-black {
     border: 1px solid black ;
 }
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
 
 /* -------------------------------- Media Queries */
 
