--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,16 +8,15 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="coffee-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Coffee
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}" id="coffee-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Coffee/Accessories
             </a>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="accessories-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Accessories
-            </a>
-            
+        <li class="nav-item dropdown"></li>
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="cafes-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Cafes
+            </a> 
         </li>
 
     </ul>
