corrected products html so product images are visible

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -27,6 +27,10 @@
                             <div class="card h-100 border-0">
                                 {% if product.image %}
                                 <a href="">
+                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                </a>
+                                {% else %}
+                                <a href="">
                                     <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
@@ -37,6 +41,9 @@
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                            {% if product.rating %}
+                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
