added categories to products model

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -11,6 +11,11 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}" id="coffee-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Coffee/Accessories
             </a>
+            <div class="dropdown-menu border-0" aria-labelledby="all-products-link"></div>
+                <a href="" class="dropdown-item">Coffee</a>
+                <a href="" class="dropdown-item ">Accessories</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+            </div>
         </li>
 
         <li class="nav-item dropdown"></li>
