--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -12,9 +12,9 @@
                 Coffee/Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link"></div>
-                <a href="" class="dropdown-item">Coffee</a>
-                <a href="" class="dropdown-item ">Accessories</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}?category=coffee,accessories" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}?category=coffee" class="dropdown-item">Coffee</a>
+                <a href="{% url 'products' %}?category=accessories" class="dropdown-item">Accessories</a>
             </div>
         </li>
 
