--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -7,8 +7,19 @@
             </a>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}" id="coffee-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item dropdown"></li>
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                All Products
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown"></li>
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="coffee-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Coffee/Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link"></div>
@@ -23,6 +34,5 @@
                 Cafes
             </a> 
         </li>
-
     </ul>
 </div>
