--- a/static/css/base.css
+++ b/static/css/base.css
@@ -45,6 +45,12 @@ body {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
