added quantity box to cart page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -74,6 +74,11 @@ body {
 	background: white;
 	z-index: -1;
 }
+.btt-link,
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
 
 /* -------------------------------- Media Queries */
 
