--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,7 +14,7 @@ body {
     background: url('/media/homepage_background.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    color: #c28369;
     font: SUSE;
 }
 
