--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background.jpg') no-repeat center center fixed;
+    background: url('/media/homepage_background.jpg') no-repeat;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #c28369;
