added post html and functionality for blog

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -26,8 +26,8 @@
         </li>
 
         <li class="nav-item dropdown"></li>
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="cafes-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Cafes
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="/blog/" id="blog-link" aria-haspopup="true" aria-expanded="false">
+                Blog
             </a> 
         </li>
     </ul>
