--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -25,7 +25,7 @@
         <div class="col-md-6 offset-md-3 text-center">
             {% if user.is_authenticated %}
                 <p>Hi <strong>{{user.username}}</strong></p>
-                <p>Welcome to The Witness The Fitness Blog</p>
+                <p>Welcome to Roastin Coffee Blog</p>
             {% else %}
                 <h1><span class="brand">The Roastin Coffee Blog</span></h1>
             {% endif %}
