--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,4 +16,32 @@
             </div>
         </div>
     </div>
+
+    <section id="contact">    
+      
+        <div class="container text-center">
+          <div class="row mt-4">
+            <div class="col-xl-3 col-md-4 col-sm-12  text-start">
+              <a href="{% url 'contact_form' %}" class="h2 btn btn-black my-5">Contact us</a>
+            </div>
+      
+            <div class="col-xl-3 col-md-6 col-sm-12">
+              <h4>LOCATION</h4>
+              <h5>123 Peek St., Any City, State, Country</h5>
+            </div>
+      
+            <div class="col-xl-3 col-md-5 col-sm-12 text-sm-start">
+              <h4 class="ms-sm-5">EMAIL ADDRESS</h4>
+              <h5 class="ms-sm-5">RoastinCoffee@gmail.com</h5>
+            </div>
+      
+            <div class="col-xl-3 col-md-7 col-sm-12 ps-lg-5">
+              <h4>PHONE NUMBER</h4>
+              <h5>(123) 456 7890</h5>
+            </div>
+          </div>
+        </div>
+      
+      </section>
+
 {% endblock %}
