--- a/static/css/base.css
+++ b/static/css/base.css
@@ -34,12 +34,6 @@ body {
     width: fit-content;
 }
 
-.shop-now-button {
-    background: black;
-    color: white;
-    min-width: 260px;
-}
-
 .btn-black {
     background: black;
     color: white;
@@ -65,6 +59,7 @@ body {
 .border-black {
     border: 1px solid black ;
 }
+
 .overlay {
 	height: 100%;
 	width: 100%;
@@ -74,6 +69,7 @@ body {
 	background: white;
 	z-index: -1;
 }
+
 .btt-link,
 .update-link,
 .remove-item {
@@ -99,6 +95,26 @@ input[name='q']::placeholder {
 
 .toast-capper {
     height: 2px;
+}
+
+#contact {
+    position: relative;
+    background: #d6cfcb;
+
+}
+
+#contact .bg-image {
+    background-size: cover;
+    width: 100%;
+    height: 80vh;  
+}
+
+#contact h4 {
+    margin-top: 70px;
+}
+
+#contact h5 {
+    margin-bottom: 70px;
 }
 
 /* Allauth form formatting */
@@ -178,6 +194,7 @@ input[name='q']::placeholder {
         padding-top: 164px;
     }
 }
+
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
