--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -25,8 +25,7 @@
                 </div>
             </form>
 
-
-            <p class="text-center">Join our comunity on <a href="https://www.facebook.com/profile.php?id=61559292835279"
+            <p class="text-center">Join our comunity on <a href="https://www.facebook.com"
                     target="_blank" class="" aria-label="Visit our Facebook page (opens in a new tab)">FaceBook</a></p>
             <br>
         </div>
