--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="home-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="home-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
         </li>
@@ -18,15 +18,14 @@
         </li>
 
         <li class="nav-item dropdown"></li>
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="coffee-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Coffee/Accessories
-            </a>
-            
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="/blog/" id="blog-link" aria-haspopup="true" aria-expanded="false">
+                Blog
+            </a> 
         </li>
 
         <li class="nav-item dropdown"></li>
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="/blog/" id="blog-link" aria-haspopup="true" aria-expanded="false">
-                Blog
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="blog-link" aria-haspopup="true" aria-expanded="false">
+                Suppliers
             </a> 
         </li>
     </ul>
