--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,7 +24,7 @@
         </li>
 
         <li class="nav-item dropdown"></li>
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="blog-link" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="/suppliers/" id="blog-link" aria-haspopup="true" aria-expanded="false">
                 Suppliers
             </a> 
         </li>
