--- a/static/css/base.css
+++ b/static/css/base.css
@@ -117,6 +117,16 @@ input[name='q']::placeholder {
     margin-bottom: 70px;
 }
 
+/* Contact Form Page */
+
+.fcontact {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+/* Reviews
+
 /* Allauth form formatting */
 
 .allauth-form-inner-content p {
