--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,19 +1,20 @@
+
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="home-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" class="nav-link main-logo-link" id="home-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
         </li>
 
-        <li class="nav-item dropdown"></li>
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Products
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Products
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+            <div class="dropdown-menu border-0" aria-labelledby="all_products-link">
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
             </div>
         </li>
 
@@ -22,7 +23,6 @@
                 Blog
             </a> 
         </li>
-
         <li class="nav-item dropdown"></li>
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="/suppliers/" id="blog-link" aria-haspopup="true" aria-expanded="false">
                 Suppliers
@@ -30,3 +30,4 @@
         </li>
     </ul>
 </div>
+
