--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,6 +9,10 @@
     </div>
 {% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% endblock %}
+
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
@@ -41,7 +45,48 @@
             </div>
           </div>
         </div>
-      
-      </section>
+
+        <div class="row">
+            <div class="col-md-4">
+                <p class="mb-0 text-muted">Social Link</p>
+                <p><a href="https://www.facebook.com" target="_blank">facebook</a></p>
+            </div>
+            <div class="col-md-4">
+                <!-- Begin Mailchimp Signup Form -->
+                <div id="mc_embed_signup">
+                <form action="https://mailchi.mp/78f5fbe56064/landing-page" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                        <h4>Subscribe</h4>
+                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                    </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                </div>
+                    <div id="mce-responses" class="clear foot">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_21e081812d6dbc735860e4b0a_d9291cd423" tabindex="-1" value=""></div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                <p class="brandingLogo"><a href="http://eepurl.com/igaYyz" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                </div>
+              
+                <!--End mc_embed_signup-->
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col text-center">
+                <p>This website is for educational purposes only</p>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
