--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,12 +11,23 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background.jpg') no-repeat;
-    background-size: cover;
-    height: calc(100vh - 164px);
+    height: 100%;
+    display: flex;
+    flex-direction:column;
     color: #c28369;
-    font: SUSE;
+    font-family: 'SUSE';
 }
+
+main {
+    flex: 1 0 auto;
+    margin-top: 128px;
+    padding-left: 10px;
+}
+
+footer{
+    flex-shrink: 0;
+}
+
 
 .icon {
     align-items: center;
