--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,8 +1,8 @@
 
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" class="nav-link main-logo-link" id="home-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" class="nav-link main-logo-link" id="home-link">
                 Home
             </a>
         </li>
@@ -18,12 +18,12 @@
             </div>
         </li>
 
-        <li class="nav-item dropdown"></li>
+        <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="/blog/" id="blog-link" aria-haspopup="true" aria-expanded="false">
                 Blog
             </a> 
         </li>
-        <li class="nav-item dropdown"></li>
+        <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="/suppliers/" id="blog-link" aria-haspopup="true" aria-expanded="false">
                 Suppliers
             </a> 
