added padding to social link on contacts page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,7 +111,7 @@ input[name='q']::placeholder {
 #contact {
     position: relative;
     background: #d6cfcb;
-
+    padding-left: 15px;
 }
 
 #contact .bg-image {
