--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-md-4">
                 <p class="mb-0 text-muted">Social Link</p>
-                <p><a href="https://www.facebook.com" target="_blank">facebook</a></p>
+                <p><a href="https://www.facebook.com" target="_blank">Facebook</a></p>
             </div>
             <div class="col-md-4">
                 <!-- Begin Mailchimp Signup Form -->
