--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -57,7 +57,7 @@
                 <div id="mc_embed_signup">
                 <form action="https://mailchi.mp/78f5fbe56064/landing-page" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
-                        <h4>Subscribe</h4>
+                        <h4>Subscribe to our Newsletter</h4>
                         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                 <div class="mc-field-group">
                     <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
