--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <form method="POST" enctype="multipart/form-data" class="p-2 form">
-        <h1 class="text-center">Contact</h1>
+        <h1 class="text-center">Contact Us</h1>
         {% csrf_token %}
         {{ form.media }} 
         {{ form|crispy }}
