--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="roastin coffee selling coffee beans and equipment">
+    <meta name="keywords" content="coffee, coffee beans, coffee equipment">
     {% endblock %}
 
     {% block extra_meta %}
