--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -11,7 +11,7 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Products
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all_products-link">
+            <div class="dropdown-menu border-0" id="clothing-link" aria-labelledby="all_products-link">
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
                 <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
