--- a/templates/base.html
+++ b/templates/base.html
@@ -139,7 +139,7 @@
     </main>
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script="text/javascript">
         $('.toast').toast('show');
     </script>
     {% endblock %}
