updated script type to script arc

--- a/templates/base.html
+++ b/templates/base.html
@@ -139,7 +139,7 @@
     </main>
 
     {% block postloadjs %}
-    <script = "text/javascript">
+    <script arc= "text/javascript">
         $('.toast').toast('show');
     </script>
     {% endblock %}
