--- a/products/templates/includes/quantity_input_scripts.html
+++ b/products/templates/includes/quantity_input_scripts.html
@@ -1,4 +1,4 @@
-<script = "text/javascript">
+<script arc= "text/javascript">
 
     // Disable +/- buttons outside 1-99 range
     function handleEnableDisable(itemId) {
