--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -133,7 +133,7 @@
 {{ block.super }}
 
 
-<script arc= "text/javascript">
+<script type= "text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
@@ -157,7 +157,7 @@
 
 {#% copied in for ease of development %#}
 
- <script arc= "text/javascript">
+ <script type= "text/javascript">
 
     // Disable +/- buttons outside 1-99 range
     function handleEnableDisable(itemId) {
