--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -93,7 +93,7 @@
  {#% include 'products/includes/quantity_input_script.html' %#}
  {#% copied in for ease of development %#}
 
- <script arc= "text/javascript">
+ <script type= "text/javascript">
 
     // Disable +/- buttons outside 1-99 range
     function handleEnableDisable(itemId) {
