--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -58,7 +58,7 @@
 
 
 {% block extra_body %}
-<script arc= "text/javascript">
+<script type= "text/javascript">
 (function() {
   var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
   var actions = document.getElementsByName('action_remove');
