added alt to cart items

--- a/suppliers/templates/suppliers/suppliers.html
+++ b/suppliers/templates/suppliers/suppliers.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class=>Suppliers</h2>
+                <h2 class>=Suppliers</h2>
                 <hr class="w-50 mb-1">
                 <h4>Where we get our coffee from</h4>
             </div>
